--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "goal-tracker",
   "version": "1.0.0",
   "description": "An AI-powered assistant to track your life &amp; career goals.",
-  "main": "index.js",
+  "main": "api/index.js",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node api/index.js"
   },
   "repository": {
     "type": "git",
