--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "openai": "^3.3.0"
+  },
   "bugs": {
     "url": "https://github.com/senthilkumar-chandramohan/goal-tracker/issues"
   },
