--- a/package.json
+++ b/package.json
@@ -2,13 +2,8 @@
   "name": "goal-tracker",
   "version": "1.0.0",
   "description": "An AI-powered assistant to track your life &amp; career goals.",
-  "main": "api/index.js",
-  "engines": {
-    "node": "18.x"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node api/index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -17,15 +12,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "openai": "^3.3.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
-  },
   "bugs": {
     "url": "https://github.com/senthilkumar-chandramohan/goal-tracker/issues"
   },
