--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "goal-tracker",
   "version": "1.0.0",
   "description": "An AI-powered assistant to track your life &amp; career goals.",
+  "main": "api/index.js",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node api/index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +20,10 @@
   "bugs": {
     "url": "https://github.com/senthilkumar-chandramohan/goal-tracker/issues"
   },
-  "homepage": "https://github.com/senthilkumar-chandramohan/goal-tracker#readme"
+  "homepage": "https://github.com/senthilkumar-chandramohan/goal-tracker#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
+  }
 }
